Add JS functionality for change

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
+    <!-- data attributes can be named whatever, sizing here, to get suffix value -->
     <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
     <label for="blur">Blur:</label>
